agregado bloque de seguridad
* bloque de seguridad que evita algunos exploits conocidos


Former-commit-id: c8e5b63692766152e468f7b46686ffbd9d3e4ea8 [formerly 7a99f59742ab0351f5d018147a71808a07d2f9f2]
Former-commit-id: 8a97151d04987ec6ad99b0b5bc7e8df280bab11b

--- a/.htaccess
+++ b/.htaccess
@@ -30,4 +30,16 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^.*$ - [L,R=404]
 
+
+## Begin - Rewrite rules to block out some common exploits.
+# If you experience problems on your site block out the operations listed below
+# Block out any script that includes a javascript: in URL.
+RewriteCond %{QUERY_STRING} (javascript:).*(\;) [NC,OR]
+# Block out any script that includes a <script> tag in URL.
+RewriteCond %{QUERY_STRING} (<|%3C)([^s]*s)+cript.*(>|%3E) [NC]
+# Return 403 Forbidden header
+RewriteRule .* - [F]
+#
+## End - Rewrite rules to block out some common exploits.
+
 </IfModule>
